--- a/app/src/main/res/layout/item_service_server.xml
+++ b/app/src/main/res/layout/item_service_server.xml
@@ -34,11 +34,11 @@
 
             <ImageView
                 android:id="@+id/img_service_server"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/nwedge" />
+                app:srcCompat="@drawable/server" />
 
             <TextView
                 android:id="@+id/txt_server_service_name"
@@ -57,6 +57,7 @@
                 style="@style/Divider"
                 android:layout_width="wrap_content"
                 android:layout_height="2dp"
+                android:layout_marginTop="4dp"
                 android:background="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toEndOf="@+id/imageView23"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -95,7 +96,7 @@
         <ImageView
             android:id="@+id/img_service_server_item_back"
             android:layout_width="396dp"
-            android:layout_height="190dp"
+            android:layout_height="220dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@color/회색" />
@@ -105,7 +106,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="12dp"
-            android:background="@drawable/inbound"
+            android:background="@drawable/stop"
             app:layout_constraintStart_toStartOf="@+id/txt_server_os_back"
             app:layout_constraintTop_toBottomOf="@+id/view2" />
 
@@ -114,9 +115,18 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="12dp"
-            android:background="@drawable/outbound"
+            android:background="@drawable/start"
             app:layout_constraintStart_toStartOf="@+id/btn_service_server_stop"
             app:layout_constraintTop_toBottomOf="@+id/btn_service_server_stop" />
+
+        <Button
+            android:id="@+id/btn_service_server_reStart"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/restart"
+            app:layout_constraintStart_toStartOf="@+id/btn_service_server_start"
+            app:layout_constraintTop_toBottomOf="@+id/btn_service_server_start" />
 
         <TextView
             android:id="@+id/txt_server_state_back"
@@ -199,6 +209,18 @@
             app:layout_constraintBottom_toBottomOf="@+id/btn_service_server_start"
             app:layout_constraintStart_toEndOf="@+id/btn_service_server_start"
             app:layout_constraintTop_toTopOf="@+id/btn_service_server_start" />
+
+        <Button
+            android:id="@+id/btn_service_server_reStart_txt"
+            android:layout_width="42dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:background="@null"
+            android:text="재시작"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_service_server_reStart"
+            app:layout_constraintStart_toEndOf="@+id/btn_service_server_reStart"
+            app:layout_constraintTop_toTopOf="@+id/btn_service_server_reStart" />
 
         <TextView
             android:id="@+id/txt_service_server_state"
