--- a/app/src/main/res/layout/item_server.xml
+++ b/app/src/main/res/layout/item_server.xml
@@ -39,12 +39,13 @@
             android:id="@+id/txt_server_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
             android:includeFontPadding="false"
             android:text="서버 개요 받아오기"
             android:textColor="@android:color/darker_gray"
             android:textSize="8sp"
-            app:layout_constraintStart_toStartOf="@+id/txt_server_title"
+            app:layout_constraintStart_toEndOf="@+id/img_server"
             app:layout_constraintTop_toBottomOf="@+id/txt_server_title" />
 
         <ImageView
@@ -54,7 +55,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/azure2" />
+            app:srcCompat="@drawable/ktlogo_server2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
