--- a/app/src/main/res/layout/service_server.xml
+++ b/app/src/main/res/layout/service_server.xml
@@ -21,22 +21,10 @@
         android:id="@+id/imageView23"
         android:layout_width="412dp"
         android:layout_height="400dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView36"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_server_zone_search"
         app:srcCompat="@color/colorAccent" />
-
-    <TextView
-        android:id="@+id/txt_watch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="8dp"
-        android:text="위치"
-        android:textSize="17sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay_service_server_back"
@@ -45,7 +33,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView23"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_watch">
+        app:layout_constraintTop_toBottomOf="@+id/txt_server_zone_search">
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -60,6 +48,32 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btn_server_zone_search"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/txt_server_zone_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:ems="6"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:text="위치"
+        android:textSize="13sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_server_zone_search"
+        app:layout_constraintTop_toTopOf="@+id/btn_server_zone_search" />
+
 
     <TextView
         android:id="@+id/txt_monitoring"
