--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -9,23 +9,12 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/bar_top"
-        android:layout_width="412dp"
-        android:layout_height="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/상단민트" />
-
-    <ImageView
         android:id="@+id/img_techcenter"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="16dp"
         android:onClick="TechcenterClicked"
-        app:layout_constraintBottom_toBottomOf="@+id/bar_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ktlogo_techservice" />
@@ -39,26 +28,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@color/상단민트" />
 
-    <Button
-        android:id="@+id/btn_home"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:background="@drawable/kt_cloud"
-        android:onClick="onButtonClicked_home"
-        app:layout_constraintBottom_toBottomOf="@+id/bar_top"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="72dp"
         android:layout_marginBottom="72dp"
         app:layout_constraintBottom_toTopOf="@+id/bar_bottom"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bar_top">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
