--- a/app/src/main/res/layout/service_main.xml
+++ b/app/src/main/res/layout/service_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="64dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@color/colorAccent"
         android:onClick="ServerClicked"
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_LB_back"
@@ -97,18 +97,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_DB_back" />
 
-    <Button
-        android:id="@+id/btn_home"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:background="@drawable/kt_cloud"
-        android:onClick="onButtonClicked_home"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="412dp"
@@ -118,32 +106,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@color/상단민트" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="412dp"
-        android:layout_height="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/상단민트" />
-
     <Button
         android:id="@+id/btn_server"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
-        android:background="@drawable/ktlogo_server2"
+        android:background="@drawable/server"
         app:layout_constraintBottom_toBottomOf="@+id/btn_server_back"
         app:layout_constraintStart_toStartOf="@+id/btn_server_back"
         app:layout_constraintTop_toTopOf="@+id/btn_server_back" />
 
     <Button
         android:id="@+id/btn_disk"
-        android:layout_width="30dp"
+        android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/ktlogo_disk"
+        android:layout_marginStart="12dp"
+        android:background="@drawable/disk"
         app:layout_constraintBottom_toBottomOf="@+id/btn_disk_back"
         app:layout_constraintStart_toStartOf="@+id/btn_disk_back"
         app:layout_constraintTop_toTopOf="@+id/btn_disk_back" />
@@ -153,7 +131,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
-        android:background="@drawable/ktlogo_loadbalancer"
+        android:background="@drawable/lb"
         app:layout_constraintBottom_toBottomOf="@+id/btn_LB_back"
         app:layout_constraintStart_toStartOf="@+id/btn_LB_back"
         app:layout_constraintTop_toTopOf="@+id/btn_LB_back" />
@@ -163,7 +141,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
-        android:background="@drawable/ktlogo_autoscaling1"
+        android:background="@drawable/autoscaling"
         app:layout_constraintBottom_toBottomOf="@+id/btn_AS_back"
         app:layout_constraintStart_toStartOf="@+id/btn_AS_back"
         app:layout_constraintTop_toTopOf="@+id/btn_AS_back" />
@@ -173,17 +151,17 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
-        android:background="@drawable/ktlogo_db"
+        android:background="@drawable/db"
         app:layout_constraintBottom_toBottomOf="@+id/btn_DB_back"
         app:layout_constraintStart_toStartOf="@+id/btn_DB_back"
         app:layout_constraintTop_toTopOf="@+id/btn_DB_back" />
 
     <Button
         android:id="@+id/btn_NAS"
-        android:layout_width="30dp"
+        android:layout_width="35dp"
         android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/ktlogo_nas"
+        android:layout_marginStart="14dp"
+        android:background="@drawable/nas"
         app:layout_constraintBottom_toBottomOf="@+id/btn_NAS_back"
         app:layout_constraintStart_toStartOf="@+id/btn_NAS_back"
         app:layout_constraintTop_toTopOf="@+id/btn_NAS_back" />
