--- a/app/src/main/res/menu/techcenter.xml
+++ b/app/src/main/res/menu/techcenter.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/web"
         android:icon="@android:drawable/sym_action_chat"
-        android:title="웹으로 문의하기"></item>
+        android:title="웹으로 문의하기"
+        app:showAsAction = "always"></item>
 
     <item
         android:id="@+id/tel"
         android:icon="@android:drawable/sym_action_call"
-        android:title="상담원 연결" />
+        android:title="상담원 연결"
+        app:showAsAction = "always"/>
 
 </menu>
