--- a/app/src/main/res/layout/service_main.xml
+++ b/app/src/main/res/layout/service_main.xml
@@ -171,11 +171,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
         android:background="@null"
         android:ems="3"
         android:inputType="textPersonName"
         android:text="[서버]"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/btn_server"
         app:layout_constraintTop_toTopOf="@+id/btn_server" />
 
@@ -184,11 +185,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
         android:background="@null"
         android:ems="3"
         android:inputType="textPersonName"
         android:text="[디스크]"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/btn_disk"
         app:layout_constraintTop_toTopOf="@+id/btn_disk" />
 
@@ -202,6 +204,8 @@
         android:ems="5"
         android:inputType="textPersonName"
         android:text="[로드밸런스]"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/btn_LB"
         app:layout_constraintTop_toTopOf="@+id/btn_LB" />
 
@@ -215,6 +219,8 @@
         android:ems="6"
         android:inputType="textPersonName"
         android:text="[오토스케일링]"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/btn_auto"
         app:layout_constraintTop_toTopOf="@+id/btn_auto" />
 
@@ -228,6 +234,8 @@
         android:ems="3"
         android:inputType="textPersonName"
         android:text="[NAS]"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/btn_NAS"
         app:layout_constraintTop_toTopOf="@+id/btn_NAS" />
 
@@ -241,6 +249,8 @@
         android:ems="6"
         android:inputType="textPersonName"
         android:text="[데이터베이스]"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/btn_DB"
         app:layout_constraintTop_toTopOf="@+id/btn_DB" />
 
@@ -249,9 +259,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
-        android:text="조회, 시작,정지"
+        android:layout_marginTop="6dp"
+        android:text="조회, 시작, 정지, 재시작 기능을 수행합니다"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/btn_server"
         app:layout_constraintTop_toBottomOf="@+id/txt_server_main_title" />
@@ -261,9 +270,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
-        android:text="조회, 이중화"
+        android:layout_marginTop="6dp"
+        android:text="조회, 이중화 기능을 수행합니다"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/btn_DB"
         app:layout_constraintTop_toBottomOf="@+id/txt_DB_main_title" />
@@ -273,9 +281,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
-        android:text="조회, VM수 조정"
+        android:layout_marginTop="6dp"
+        android:text="조회, VM수 조정 기능을 수행합니다"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/btn_auto"
         app:layout_constraintTop_toBottomOf="@+id/txt_AS_main_title" />
@@ -285,9 +292,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
-        android:text="조회"
+        android:layout_marginTop="6dp"
+        android:text="조회 기능을 수행합니다"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/btn_LB"
         app:layout_constraintTop_toBottomOf="@+id/txt_LB_main_title" />
@@ -297,9 +303,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
-        android:text="조회"
+        android:layout_marginTop="6dp"
+        android:text="조회 기능을 수행합니다"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/btn_disk"
         app:layout_constraintTop_toBottomOf="@+id/txt_disk_main_title" />
@@ -309,9 +314,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
-        android:text="조회"
+        android:layout_marginTop="6dp"
+        android:text="조회 기능을 수행합니다"
         app:layout_constraintStart_toEndOf="@+id/btn_NAS"
         app:layout_constraintTop_toBottomOf="@+id/txt_NAS_main_title" />
 
