--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="바주황">#FF9800</color>
     <color name="빨간바">#F8485E</color>
     <color name="회색">#F4F4F4</color>
+    <color name="검정">#1A1A1A</color>
 </resources>
