--- a/app/src/main/res/layout/monitoring.xml
+++ b/app/src/main/res/layout/monitoring.xml
@@ -262,7 +262,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
-            android:text="< NetworkIn >"
+            android:text="NetworkIn"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/chart"
             app:layout_constraintStart_toStartOf="parent"
@@ -274,7 +274,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
-            android:text="< NetworkOut >"
+            android:text="NetworkOut"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent" />
