--- a/app/src/main/res/layout/service_main.xml
+++ b/app/src/main/res/layout/service_main.xml
@@ -315,7 +315,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="6dp"
-        android:text="조회 기능을 수행합니다"
+        android:text="조회, 사이즈 변경 기능을 수행합니다"
         app:layout_constraintStart_toEndOf="@+id/btn_NAS"
         app:layout_constraintTop_toBottomOf="@+id/txt_NAS_main_title" />
 
