--- a/app/src/main/res/layout/item_service_lb.xml
+++ b/app/src/main/res/layout/item_service_lb.xml
@@ -230,6 +230,17 @@
             app:layout_constraintStart_toEndOf="@+id/txt_lb_port_back"
             app:layout_constraintTop_toTopOf="@+id/txt_lb_port_back" />
 
+        <Button
+            android:id="@+id/btn_service_lb_serInfo_img"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:background="@drawable/search"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_service_lb_server"
+            app:layout_constraintStart_toEndOf="@+id/txt_service_lb_server"
+            app:layout_constraintTop_toTopOf="@+id/txt_service_lb_server" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
