--- a/app/src/main/res/layout/item_moni_alarm.xml
+++ b/app/src/main/res/layout/item_moni_alarm.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/moni_lb_lay"
+    android:id="@+id/moni_alarm_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
@@ -12,16 +12,16 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/lay_moni_lb"
+        android:id="@+id/lay_moni_alarm"
         android:layout_width="match_parent"
-        android:layout_height="41dp"
+        android:layout_height="32dp"
         android:layout_weight="1"
         android:background="@color/colorAccent"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/lay_moni_lb2"
+            android:id="@+id/lay_moni_alarm2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -33,24 +33,24 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/img_moni_lb"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:id="@+id/img_moni_alarm"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/alarm" />
+                app:srcCompat="@drawable/ic_notifications_black_24dp" />
 
             <TextView
-                android:id="@+id/txt_lb_moni_name"
+                android:id="@+id/txt_alarm_moni_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginLeft="12dp"
-                android:text="로드밸런서명 (클릭시 하단 관리창)"
-                android:textSize="17sp"
-                app:layout_constraintBottom_toBottomOf="@+id/img_moni_lb"
-                app:layout_constraintStart_toEndOf="@+id/img_moni_lb"
-                app:layout_constraintTop_toTopOf="@+id/img_moni_lb" />
+                android:text="Watch 알람명 (클릭시 하단 관리창)"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@+id/img_moni_alarm"
+                app:layout_constraintStart_toEndOf="@+id/img_moni_alarm"
+                app:layout_constraintTop_toTopOf="@+id/img_moni_alarm" />
 
             <View
                 android:id="@+id/view7"
@@ -62,7 +62,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/imageView23"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_moni_lb" />
+                app:layout_constraintTop_toBottomOf="@+id/img_moni_alarm" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -70,7 +70,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/lay_moni_lb_item"
+        android:id="@+id/lay_moni_alarm_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -83,152 +83,132 @@
 
 
         <ImageView
-            android:id="@+id/img_moni_lb_item_back"
+            android:id="@+id/img_moni_alarm_item_back"
             android:layout_width="396dp"
-            android:layout_height="190dp"
+            android:layout_height="148dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@color/회색" />
 
         <TextView
-            android:id="@+id/txt_lb_server_back"
+            android:id="@+id/txt_alarm_moni_state_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="12dp"
             android:background="@null"
-            android:ems="5"
+            android:ems="3"
             android:inputType="textPersonName"
-            android:text="적용서버 : "
+            android:text="상태 : "
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/img_moni_lb_item_back"
-            app:layout_constraintTop_toTopOf="@+id/img_moni_lb_item_back" />
+            app:layout_constraintStart_toStartOf="@+id/img_moni_alarm_item_back"
+            app:layout_constraintTop_toTopOf="@+id/img_moni_alarm_item_back" />
 
         <TextView
-            android:id="@+id/txt_lb_opt_back"
+            android:id="@+id/txt_alarm_moni_if_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:background="@null"
-            android:ems="7"
+            android:ems="6"
             android:inputType="textPersonName"
-            android:text="로드밸런서 옵션 : "
+            android:text="알람 발생 조건 : "
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/txt_lb_server_back"
-            app:layout_constraintTop_toBottomOf="@+id/txt_lb_server_back" />
+            app:layout_constraintStart_toStartOf="@+id/txt_alarm_moni_state_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_alarm_moni_state_back" />
 
         <TextView
-            android:id="@+id/txt_lb_type_back"
+            android:id="@+id/txt_alarm_moni_onoff_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:background="@null"
-            android:ems="7"
+            android:ems="6"
             android:inputType="textPersonName"
-            android:text="로드밸런서 타입 : "
+            android:text="액션 수행 여부 : "
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/txt_lb_opt_back"
-            app:layout_constraintTop_toBottomOf="@+id/txt_lb_opt_back" />
+            app:layout_constraintStart_toStartOf="@+id/txt_alarm_moni_if_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_alarm_moni_if_back" />
 
         <TextView
-            android:id="@+id/txt_lb_zone_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:background="@null"
-            android:ems="5"
-            android:inputType="textPersonName"
-            android:text="위치(Zone) : "
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/txt_lb_type_back"
-            app:layout_constraintTop_toBottomOf="@+id/txt_lb_type_back" />
-
-        <TextView
-            android:id="@+id/txt_lb_ip_back"
+            android:id="@+id/txt_alarm_moni_act_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:background="@null"
             android:ems="5"
             android:inputType="textPersonName"
-            android:text="IP : "
+            android:text="수행 액션 : "
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/txt_lb_zone_back"
-            app:layout_constraintTop_toBottomOf="@+id/txt_lb_zone_back" />
+            app:layout_constraintStart_toStartOf="@+id/txt_alarm_moni_onoff_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_alarm_moni_onoff_back" />
 
         <TextView
-            android:id="@+id/txt_lb_port_back"
+            android:id="@+id/txt_alarm_moni_type_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:background="@null"
-            android:ems="5"
+            android:ems="3"
             android:inputType="textPersonName"
-            android:text="Port : "
+            android:text="구분 : "
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/txt_lb_ip_back"
-            app:layout_constraintTop_toBottomOf="@+id/txt_lb_ip_back" />
+            app:layout_constraintStart_toStartOf="@+id/txt_alarm_moni_act_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_alarm_moni_act_back" />
 
         <TextView
-            android:id="@+id/txt_moni_lb_server"
+            android:id="@+id/txt_moni_alarm_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="적용서버 받아오기"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_lb_server_back"
-            app:layout_constraintStart_toEndOf="@+id/txt_lb_server_back"
-            app:layout_constraintTop_toTopOf="@+id/txt_lb_server_back" />
+            android:text="알람 상태 받아오기"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_alarm_moni_state_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_alarm_moni_state_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_alarm_moni_state_back" />
 
         <TextView
-            android:id="@+id/txt_moni_lb_opt"
+            android:id="@+id/txt_moni_alarm_opt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LB 옵션 받아오기"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_lb_opt_back"
-            app:layout_constraintStart_toEndOf="@+id/txt_lb_opt_back"
-            app:layout_constraintTop_toTopOf="@+id/txt_lb_opt_back" />
+            android:text="알람 발생 조건 받아오기"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_alarm_moni_if_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_alarm_moni_if_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_alarm_moni_if_back" />
 
         <TextView
-            android:id="@+id/txt_moni_lb_type"
+            android:id="@+id/txt_moni_alarm_onoff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LB 타입 받아오기"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_lb_type_back"
-            app:layout_constraintStart_toEndOf="@+id/txt_lb_type_back"
-            app:layout_constraintTop_toTopOf="@+id/txt_lb_type_back" />
+            android:text="알람 활성화 여부 받아오기"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_alarm_moni_onoff_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_alarm_moni_onoff_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_alarm_moni_onoff_back" />
 
         <TextView
-            android:id="@+id/txt_moni_lb_zone"
+            android:id="@+id/txt_moni_alarm_act"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Zone 위치 받아오기"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_lb_zone_back"
-            app:layout_constraintStart_toEndOf="@+id/txt_lb_zone_back"
-            app:layout_constraintTop_toTopOf="@+id/txt_lb_zone_back" />
+            android:text="(이메일) gurukbc2@gmail.com"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_alarm_moni_act_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_alarm_moni_act_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_alarm_moni_act_back"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/txt_moni_lb_ip"
+            android:id="@+id/txt_moni_alarm_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Zone 위치 받아오기"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_lb_ip_back"
-            app:layout_constraintStart_toEndOf="@+id/txt_lb_ip_back"
-            app:layout_constraintTop_toTopOf="@+id/txt_lb_ip_back" />
-
-        <TextView
-            android:id="@+id/txt_moni_lb_port"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Zone 위치 받아오기"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_lb_port_back"
-            app:layout_constraintStart_toEndOf="@+id/txt_lb_port_back"
-            app:layout_constraintTop_toTopOf="@+id/txt_lb_port_back" />
+            android:text="알람 구분값"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_alarm_moni_type_back"
+            app:layout_constraintStart_toEndOf="@+id/txt_alarm_moni_type_back"
+            app:layout_constraintTop_toTopOf="@+id/txt_alarm_moni_type_back" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
