--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="빨간바">#F8485E</color>
     <color name="회색">#F4F4F4</color>
     <color name="검정">#1A1A1A</color>
+    <color name="진한회색">#898888</color>
 </resources>
