--- a/app/src/main/res/layout/item_metric_opt.xml
+++ b/app/src/main/res/layout/item_metric_opt.xml
@@ -39,6 +39,7 @@
             android:id="@+id/cbtn_metric_opt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
