--- a/app/src/main/res/layout/monitoring.xml
+++ b/app/src/main/res/layout/monitoring.xml
@@ -289,7 +289,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <com.github.mikephil.charting.charts.LineChart
-                    android:id="@+id/chart"
+                    android:id="@+id/chart_networkin"
                     android:layout_width="350dp"
                     android:layout_height="121dp"
                     android:layout_marginStart="16dp"
@@ -314,7 +314,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView11">
 
                 <com.github.mikephil.charting.charts.LineChart
-                    android:id="@+id/chart2"
+                    android:id="@+id/chart_networkout"
                     android:layout_width="353dp"
                     android:layout_height="127dp"
                     android:layout_marginStart="16dp"
@@ -335,7 +335,19 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12"></LinearLayout>
+                app:layout_constraintTop_toBottomOf="@+id/textView12">
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/chart_cpuutilization"
+                    android:layout_width="353dp"
+                    android:layout_height="127dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView5"
+                    app:layout_constraintHorizontal_bias="0.024"
+                    app:layout_constraintStart_toStartOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/metric_diskRead"
@@ -346,7 +358,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView13"></LinearLayout>
+                app:layout_constraintTop_toBottomOf="@+id/textView13">
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/chart_diskreadbytes"
+                    android:layout_width="353dp"
+                    android:layout_height="127dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView5"
+                    app:layout_constraintHorizontal_bias="0.024"
+                    app:layout_constraintStart_toStartOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/metric_diskWrite"
@@ -356,7 +380,19 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14"></LinearLayout>
+                app:layout_constraintTop_toBottomOf="@+id/textView14">
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/chart_diskwritebytes"
+                    android:layout_width="353dp"
+                    android:layout_height="127dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView5"
+                    app:layout_constraintHorizontal_bias="0.024"
+                    app:layout_constraintStart_toStartOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/metric_memory"
@@ -366,7 +402,19 @@
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView15"></LinearLayout>
+                app:layout_constraintTop_toBottomOf="@+id/textView15">
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/chart_memoryinternalfree"
+                    android:layout_width="353dp"
+                    android:layout_height="127dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView5"
+                    app:layout_constraintHorizontal_bias="0.024"
+                    app:layout_constraintStart_toStartOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
