--- a/app/src/main/res/layout/item_moni_topic.xml
+++ b/app/src/main/res/layout/item_moni_topic.xml
@@ -85,9 +85,10 @@
 
         <ImageView
             android:id="@+id/img_moni_topic_item_back"
-            android:layout_width="396dp"
-            android:layout_height="164dp"
+            android:layout_width="390dp"
+            android:layout_height="137dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
@@ -124,20 +125,6 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_topic_pub_back" />
 
         <TextView
-            android:id="@+id/txt_topic_content_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:background="@null"
-            android:ems="5"
-            android:inputType="textPersonName"
-            android:text="설명 : "
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/txt_topic_protocol_back"
-            app:layout_constraintTop_toBottomOf="@+id/txt_topic_protocol_back" />
-
-        <TextView
             android:id="@+id/txt_topic_receiver_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -148,8 +135,9 @@
             android:text="수신처 : "
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/txt_topic_content_back"
-            app:layout_constraintTop_toBottomOf="@+id/txt_topic_content_back" />
+            app:layout_constraintEnd_toStartOf="@+id/txt_topic_receiver"
+            app:layout_constraintStart_toStartOf="@+id/txt_topic_protocol_back"
+            app:layout_constraintTop_toBottomOf="@+id/txt_topic_protocol_back" />
 
         <TextView
             android:id="@+id/txt_topic_pub"
@@ -168,15 +156,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/txt_topic_protocol_back"
             app:layout_constraintStart_toEndOf="@+id/txt_topic_protocol_back"
             app:layout_constraintTop_toTopOf="@+id/txt_topic_protocol_back" />
-
-        <TextView
-            android:id="@+id/txt_topic_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="설명 받아오기"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_topic_content_back"
-            app:layout_constraintStart_toEndOf="@+id/txt_topic_content_back"
-            app:layout_constraintTop_toTopOf="@+id/txt_topic_content_back" />
 
         <TextView
             android:id="@+id/txt_topic_receiver"
