--- a/app/src/main/res/layout/monitoring.xml
+++ b/app/src/main/res/layout/monitoring.xml
@@ -85,12 +85,12 @@
             android:layout_width="98dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginBottom="3dp"
             android:background="@null"
             android:ems="10"
             android:focusableInTouchMode="false"
             android:inputType="textPersonName"
-            android:text="메시지 기능"
+            android:text="messaging"
             android:textColor="@color/검회색글자"
             android:textSize="17sp"
             android:textStyle="normal"
