--- a/app/src/main/res/layout/item_service_nas.xml
+++ b/app/src/main/res/layout/item_service_nas.xml
@@ -164,7 +164,7 @@
             android:id="@+id/txt_nas_tarSize_change_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="12dp"
             android:background="@null"
             android:ems="8"
             android:inputType="textPersonName"
@@ -218,7 +218,7 @@
             android:layout_height="38dp"
             android:ems="7"
             android:gravity="center"
-            android:hint="사이즈(500~20000GB) 입력"
+            android:hint="사이즈(단위 : GB) 입력"
             android:inputType="number"
             android:textColor="@color/검회색글자"
             android:textSize="13sp"
@@ -234,6 +234,16 @@
             app:layout_constraintBottom_toBottomOf="@+id/txt_nas_tarSize_change"
             app:layout_constraintStart_toEndOf="@+id/txt_nas_tarSize_change"
             app:layout_constraintTop_toTopOf="@+id/txt_nas_tarSize_change" />
+
+        <TextView
+            android:id="@+id/textView22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="8dp"
+            android:text="* 일반존 : 최대 10000GB, Seoul - M2존 1132GB 최대"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
